<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        tools:context=".AgentSummaryActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/agent_summary"
            android:textColor="@color/colorPrimary"
            android:fontFamily="sans-serif-black"
            android:shadowDx="4"
            android:shadowDy="4"
            android:shadowRadius="3"
            android:shadowColor="@color/colorPrimaryDark"
            android:layout_marginBottom="20dp"
            android:textSize="30sp"/>

    <TextView
            android:id="@+id/agentClass_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="15sp"/>

    <TextView
            android:id="@+id/agentSex_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="15sp"/>

    <TextView
            android:id="@+id/agentRank_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="15sp"/>

    <TextView
            android:id="@+id/agentAffiliation_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="15sp"
            android:visibility="gone"/>

    <TextView
            android:id="@+id/agentEquipment_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/agent_equipment"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            android:visibility="gone"/>

    <android.support.v7.widget.RecyclerView
            android:id="@+id/agentEquipment_recycler"
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:visibility="gone"/>

    <TextView
            android:id="@+id/agentAlly_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/agent_allies"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            android:visibility="gone"/>

    <android.support.v7.widget.RecyclerView
            android:id="@+id/agentAlly_recycler"
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:visibility="gone"/>

    <TextView
            android:id="@+id/agentPower_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/agent_powers"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:visibility="gone"/>

    <android.support.v7.widget.RecyclerView
            android:id="@+id/agentPower_recycler"
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:visibility="gone"/>

    <TextView
            android:id="@+id/agentStrength_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="XX"
            android:textColor="@color/colorPrimary"
            android:fontFamily="sans-serif-black"
            android:shadowDx="4"
            android:shadowDy="4"
            android:shadowRadius="3"
            android:shadowColor="@color/colorPrimaryDark"
            android:layout_marginTop="10dp"
            android:textSize="30sp"/>

    <Button
            android:id="@+id/calculateStrength_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="Calculate"/>

    <Button
            android:id="@+id/selectVillian_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="Select a Villian"/>
</LinearLayout>